fix logo on mobile

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -139,6 +139,10 @@
   box-shadow: none;
 }
 
+.image-mobile {
+  width: 30% !important;
+}
+
 #nav-icon1 {
   width: 30px;
   height: 20px;
